Fix alignment of hours
These were off by a bit from the previous calendar grid that included
the days of the week.

--- a/app/styles/ilios-common/components/weekly-calendar.scss
+++ b/app/styles/ilios-common/components/weekly-calendar.scss
@@ -62,7 +62,7 @@
       @for $hour from 0 through 23 {
         &.hour-#{$hour} {
           grid-column: 1;
-          grid-row: ($hour * 60) + 2;
+          grid-row: $hour * 60;
         }
       }
     }
